--- a/source/form.html
+++ b/source/form.html
@@ -9,34 +9,36 @@
 </head>
 <body class="page__body">
   <header class="page-header">
-    <a class="page-header__logo">
-      <img src="img/logo-sedona-mobile.svg" alt="Логотип">
-    </a>
-    <nav class="main-nav">
-      <div class="main-nav__wrapper">
-        <button class="main-nav__toggle" type="button">
-          <span class="visually-hidden">Открыть меню</span>
-        </button>
-        <ul class="main-nav__list site-list">
-          <li class="site-list__item site-list__item--active">
-            <a class="site-list__link" href="index.html">Главная</a>
-          </li>
-          <li class="site-list__item">
-            <a class="site-list__link" href="photo.html">Фото и видео</a>
-          </li>
-          <li class="site-list__item site-list__item--logo"></li>
-          <li class="site-list__item">
-            <a class="site-list__link">Форма Отзыва</a>
-          </li>
-          <li class="site-list__item">
-            <a class="site-list__link" href="#">HTML ACADEMY</a>
-          </li>
-        </ul>
-        <!-- /.site-list -->
-      </div>
-
-    </nav>
-    <!-- /.main-nav -->
+    <div class="page-header__wrapper">
+      <a class="page-header__logo">
+        <img src="img/logo-sedona-mobile.svg" alt="Логотип">
+      </a>
+      <nav class="main-nav">
+        <div class="main-nav__wrapper">
+          <button class="main-nav__toggle" type="button">
+            <span class="visually-hidden">Открыть меню</span>
+          </button>
+          <ul class="main-nav__list site-list">
+            <li class="site-list__item site-list__item--active">
+              <a class="site-list__link" href="index.html">Главная</a>
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link" href="photo.html">Фото и видео</a>
+            </li>
+            <li class="site-list__item site-list__item--logo"></li>
+            <li class="site-list__item">
+              <a class="site-list__link">Форма Отзыва</a>
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link" href="#">HTML ACADEMY</a>
+            </li>
+          </ul>
+          <!-- /.site-list -->
+        </div>
+      </nav>
+      <!-- /.main-nav -->
+    </div>
+    <!-- /.page-header__wrapper -->
   </header>
   <!-- /.page-header -->
 
@@ -49,106 +51,106 @@
     </div>
 
     <section class="review">
-
-        <div class="review__header">
-          <h2 class="review__header-title text-title">Оставьте свой отзыв</h2>
-          <p class="review__header-text text-description text-description--sub">
-            Помогите нашим отелям стать лучше! оставьте отзыв о них, а также о посещенных вами достопримечательностях
-          </p>
+      <div class="review__header">
+        <h2 class="review__header-title text-title">Оставьте свой отзыв</h2>
+        <p class="review__header-text text-description text-description--sub">
+          Помогите нашим отелям стать лучше! оставьте отзыв о них, а также о посещенных вами достопримечательностях
+        </p>
+      </div>
+      <!-- /.review__header -->
+      <form action="https://echo.htmlacademy.ru" method="POST" class="review-form">
+        <div class="review-form__group form-group">
+          <h2 class="form-group__title text-title">Представьтесь:</h2>
+          <div class="form-group__item">
+            <label for="firstname" class="label label--text">ИМЯ*:</label>
+            <div class="form-group__fields">
+              <input type="text" class="field field--text" name="firstname" id="firstname" value="Петр" required>
+            </div>
+          </div>
+          <div class="form-group__item">
+            <label for="lastname" class="label label--text">ФАМИЛИЯ*:</label>
+            <div class="form-group__fields">
+              <input type="text" class="field field--text" name="lastname" id="lastname" value="Иванов" required>
+            </div>
+          </div>
+          <div class="form-group__item">
+            <label for="middlename" class="label label--text">ОТЧЕСТВО:</label>
+            <div class="form-group__fields">
+              <input type="text" class="field field--text" name="middlename" id="middlename" value="Александрович" required>
+            </div>
+          </div>
         </div>
-        <!-- /.review__header -->
-        <form action="https://echo.htmlacademy.ru" method="POST" class="review-form">
-          <div class="review-form__group form-group">
-            <h2 class="form-group__title text-title">Представьтесь:</h2>
-            <div class="form-group__item">
-              <label for="firstname" class="label label--text">ИМЯ*:</label>
-              <div class="form-group__fields">
-                <input type="text" class="field field--text" name="firstname" id="firstname" value="Петр" required>
-              </div>
-            </div>
-            <div class="form-group__item">
-              <label for="lastname" class="label label--text">ФАМИЛИЯ*:</label>
-              <div class="form-group__fields">
-                <input type="text" class="field field--text" name="lastname" id="lastname" value="Иванов" required>
-              </div>
-            </div>
-            <div class="form-group__item">
-              <label for="middlename" class="label label--text">ОТЧЕСТВО:</label>
-              <div class="form-group__fields">
-                <input type="text" class="field field--text" name="middlename" id="middlename" value="Александрович" required>
-              </div>
+        <!-- /.form-group -->
+        <div class="review-form__group form-group">
+          <h2 class="form-group__title text-title">Контактная информация:</h2>
+          <div class="form-group__item">
+            <label for="tel" class="label label--text">Контактный телефон*:</label>
+            <div class="form-group__fields">
+              <input type="tel" class="field field--text" name="tel" id="tel" placeholder="Введите телефон" required>
+              <div class="field-icon field-icon--tel"></div>
             </div>
           </div>
-          <!-- /.form-group -->
-          <div class="review-form__group form-group">
-            <h2 class="form-group__title text-title">Контактная информация:</h2>
-            <div class="form-group__item">
-              <label for="tel" class="label label--text">Контактный телефон*:</label>
-              <div class="form-group__fields">
-                <input type="tel" class="field field--text" name="tel" id="tel" placeholder="Введите телефон" required>
-                <div class="field-icon field-icon--tel"></div>
-              </div>
-            </div>
-            <div class="form-group__item">
-              <label for="email" class="label label--text">Электронная почта*:</label>
-              <div class="form-group__fields">
-                <input type="email" class="field field--text" name="email" id="email" placeholder="Введите e-mail" required>
-                <div class="field-icon field-icon--email"></div>
-              </div>
+          <div class="form-group__item">
+            <label for="email" class="label label--text">Электронная почта*:</label>
+            <div class="form-group__fields">
+              <input type="email" class="field field--text" name="email" id="email" placeholder="Введите e-mail" required>
+              <div class="field-icon field-icon--email"></div>
             </div>
           </div>
-          <!-- /.form-group -->
-          <div class="review-form__group form-group">
-            <h2 class="form-group__title text-title">Ваше Общее впечатление:</h2>
-            <div class="form-group__item">
-              <input type="radio" class="hidden" name="impression" id="positive" value="positive" checked>
-              <label for="positive" class="label label--selection">Скорее положительное</label>
-            </div>
-            <div class="form-group__item">
-              <input type="radio" class="hidden" name="impression" id="negative" value="negative">
-              <label for="negative" class="label label--selection">Скорее отрицательное</label>
-            </div>
-            <div class="form-group__item">
-              <input type="radio" class="hidden" name="impression" id="neutral" value="neutral">
-              <label for="neutral" class="label label--selection">Затрудняюсь ответить</label>
-            </div>
+        </div>
+        <!-- /.form-group -->
+        <div class="review-form__group form-group">
+          <h2 class="form-group__title text-title">Ваше Общее впечатление:</h2>
+          <div class="form-group__item">
+            <input type="radio" class="hidden" name="impression" id="positive" value="positive" checked>
+            <label for="positive" class="label label--selection">Скорее положительное</label>
           </div>
-          <!-- /.form-group -->
-          <div class="review-form__group form-group">
-            <h2 class="form-group__title text-title">Посещенные достопримечательности:</h2>
-            <div class="form-group__item">
-              <input type="checkbox" class="hidden" name="bridge" id="bridge" checked>
-              <label for="bridge" class="label label--selection">Мост Дьявола</label>
-            </div>
-            <div class="form-group__item">
-              <input type="checkbox" class="hidden" name="mountain" id="mountain" checked>
-              <label for="mountain" class="label label--selection">Гора-Колокол</label>
-            </div>
-            <div class="form-group__item">
-              <input type="checkbox" class="hidden" name="park" id="park" checked>
-              <label for="park" class="label label--selection">Слайд-парк</label>
-            </div>
-            <div class="form-group__item">
-              <input type="checkbox" class="hidden" name="rocks" id="rocks">
-              <label for="rocks" class="label label--selection">Красные скалы</label>
-            </div>
+          <div class="form-group__item">
+            <input type="radio" class="hidden" name="impression" id="negative" value="negative">
+            <label for="negative" class="label label--selection">Скорее отрицательное</label>
           </div>
-          <!-- /.form-group -->
-          <div class="review-form__group form-group">
-            <h2 class="form-group__title text-title">Опишите свои эмоции:</h2>
-            <textarea class="field field--area" name="comment" id="comment" cols="" rows="" placeholder="Опишите подробно все свои восторги"></textarea>
+          <div class="form-group__item">
+            <input type="radio" class="hidden" name="impression" id="neutral" value="neutral">
+            <label for="neutral" class="label label--selection">Затрудняюсь ответить</label>
           </div>
-          <!-- /.form-group -->
-          <button class="button button--submit">ОТПРАВИТЬ ОТЗЫВ</button>
-        </form>
-        <!-- /.review-form -->
-
+        </div>
+        <!-- /.form-group -->
+        <div class="review-form__group form-group">
+          <h2 class="form-group__title text-title">Посещенные достопримечательности:</h2>
+          <div class="form-group__item">
+            <input type="checkbox" class="hidden" name="bridge" id="bridge" checked>
+            <label for="bridge" class="label label--selection">Мост Дьявола</label>
+          </div>
+          <div class="form-group__item">
+            <input type="checkbox" class="hidden" name="mountain" id="mountain" checked>
+            <label for="mountain" class="label label--selection">Гора-Колокол</label>
+          </div>
+          <div class="form-group__item">
+            <input type="checkbox" class="hidden" name="park" id="park" checked>
+            <label for="park" class="label label--selection">Слайд-парк</label>
+          </div>
+          <div class="form-group__item">
+            <input type="checkbox" class="hidden" name="rocks" id="rocks">
+            <label for="rocks" class="label label--selection">Красные скалы</label>
+          </div>
+        </div>
+        <!-- /.form-group -->
+        <div class="review-form__group form-group">
+          <h2 class="form-group__title text-title">Опишите свои эмоции:</h2>
+          <textarea class="field field--area" name="comment" id="comment" cols="" rows="" placeholder="Опишите подробно все свои восторги"></textarea>
+        </div>
+        <!-- /.form-group -->
+        <button class="button button--submit">ОТПРАВИТЬ ОТЗЫВ</button>
+      </form>
+      <!-- /.review-form -->
     </section>
     <!-- /.review -->
+  </main>
+  <!-- /.page-main -->
 
-    <footer class="page-footer">
-      <div class="page-footer__wrapper">
-        <span class="page-footer__hashtag text-title text-title--promo">#visitSEDONA</span>
+  <footer class="page-footer">
+    <div class="page-footer__wrapper">
+      <span class="page-footer__hashtag text-title text-title--promo">#visitSEDONA</span>
       <div class="page-footer__social social">
         <ul class="social__list">
           <li class="social__item">
@@ -168,12 +170,9 @@
         <div class="copyright__icon"></div>
       </div>
       <!-- /.copyright -->
-      </div>
-      <!-- /.page-footer__wrapper -->
-    </footer>
-    <!-- /.page-footer -->
-</main>
-<!-- /.page-main -->
-
+    </div>
+    <!-- /.page-footer__wrapper -->
+  </footer>
+  <!-- /.page-footer -->
 </body>
 </html>
