--- a/source/index.html
+++ b/source/index.html
@@ -12,7 +12,11 @@
     <div class="page-header__wrapper">
       <div class="page-header__container">
         <a class="page-header__logo">
-          <img src="img/logo-sedona-mobile.svg" alt="Логотип">
+          <picture>
+            <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
+            <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
+            <img width="102" height="84" src="img/logo-sedona-mobile.svg" alt="Логотип" class="page-header__logo-img">
+          </picture>
         </a>
         <button class="page-header__button button-burger" type="button">
           <span class="visually-hidden">Открыть меню</span>
