--- a/source/index.html
+++ b/source/index.html
@@ -88,7 +88,7 @@
         <h2 class="visually-hidden">Преимущества</h2>
         <ul class="advantages__list">
           <li class="advantages__item advantage advantage--explicit">
-            <div class="advantage__header advantage__header--explicit">
+            <div class="advantage__header advantage__header--explicit advantage__header--city">
               <div class="advantage__header-wrapper">
                 <h3 class="advantage__title advantage__title--explicit text-title">НАСТОЯЩИЙ<br> ГОРОДОК</h3>
                 <p class="advantage__number advantage__number--explicit text-description">— №1 —</p>
@@ -99,7 +99,7 @@
             <div class="advantage__img advantage__img--city"></div>
             <div class="advantage__details detail">
               <div class="detail__item detail__item--house">
-                <div class="detail__icon">
+                <div class="detail__icon detail__icon--house">
                   <svg class="detail-icon detail-icon--house" width="39" height="37" viewBox="0 0 39 37" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
                     <path
@@ -121,14 +121,14 @@
                     <path d="M30.1769 24.1128H28.6106V26.0968H30.1769V24.1128Z" fill="#81B3D2" />
                   </svg>
                 </div>
-                <div class="detail__header">
+                <div class="detail__header detail__header--house">
                   <p class="detail__title text-title text-title--detail">ЖИЛЬЕ</p>
                   <p class="detail__description text-description">Рекомендуем пожить в настоящем мотеле, все как в кино!
                   </p>
                 </div>
               </div>
               <div class="detail__item detail__item--gift">
-                <div class="detail__icon">
+                <div class="detail__icon detail__icon--gift">
                   <svg class="detail-icon detail-icon--gift" width="32" height="38" viewBox="0 0 32 38" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
                     <path
@@ -136,13 +136,13 @@
                       fill="#81B3D2" />
                   </svg>
                 </div>
-                <div class="detail__header">
+                <div class="detail__header detail__header--gift">
                   <p class="detail__title text-title text-title--detail">СУВЕНИРЫ</p>
                   <p class="detail__description text-description">Не только китайского,<br> но и местного производства!</p>
                 </div>
               </div>
               <div class="detail__item detail__item--food">
-                <div class="detail__icon">
+                <div class="detail__icon detail__icon--food">
                   <svg class="detail-icon detail-icon--food" width="40" height="35" viewBox="0 0 40 35" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
                     <path
@@ -166,7 +166,7 @@
                   </svg>
                 </div>
 
-                <div class="detail__header">
+                <div class="detail__header detail__header--food">
                   <p class="detail__title text-title text-title--detail">ЕДА</p>
                   <p class="detail__description text-description">Всегда заказывайте ФИРМЕННЫЙ БУРГЕР, Вы НЕ
                     разочаруетесь!</p>
@@ -176,8 +176,8 @@
           </li>
           <!-- /.advantages__item -->
           <li class="advantages__item advantage advantage--explicit advantage--reverse">
-            <div class="advantage__header advantage__header--explicit">
-              <div class="advantage__header-wrapper">
+            <div class="advantage__header advantage__header--explicit advantage__header--bridge">
+              <div class="advantage__header-wrapper advantage__header-wrapper">
                 <h3 class="advantage__title advantage__title--explicit text-title">ТАМ ЕСТЬ<br> МОСТ ДЬЯВОЛА</h3>
                 <p class="advantage__number advantage__number--explicit text-description">— №2 —</p>
                 <p class="advantage__description advantage__description--explicit text-description">Да, по нему можно
